--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div class="contenedor-carousel">
                 <div class="carousel">
                     <div class="pic">
-                        <a href="#"><img src="/images/OE7GDA0.jpg" alt="Dormitorio"></a>
+                        <a href="#"><img src="images/OE7GDA0.jpg" alt="Dormitorio"></a>
                     </div>
                     <div class="pic">
                         <a href="#"><img src="/images/6537.jpg" alt="Balcón"></a>
