--- a/index.html
+++ b/index.html
@@ -66,37 +66,37 @@
                         <a href="#"><img src="images/OE7GDA0.jpg" alt="Dormitorio"></a>
                     </div>
                     <div class="pic">
-                        <a href="#"><img src="/images/6537.jpg" alt="Balcón"></a>
+                        <a href="#"><img src="images/6537.jpg" alt="Balcón"></a>
                     </div>
                     <div class="pic">
-                        <a href="#"><img src="/images/3844.jpg" alt="Baño"></a>
+                        <a href="#"><img src="images/3844.jpg" alt="Baño"></a>
                     </div>
                     <div class="pic">
-                        <a href="#"><img src="/images/10412.jpg" alt="Comedor"></a>
+                        <a href="#"><img src="images/10412.jpg" alt="Comedor"></a>
                     </div>
                     <div class="pic">
-                        <a href="#"><img src="/images/499.jpg" alt="Sala de estar"></a>
+                        <a href="#"><img src="images/499.jpg" alt="Sala de estar"></a>
                     </div>
                     <div class="pic">
-                        <a href="#"><img src="/images/17997227.jpg" alt="Garage"></a>
+                        <a href="#"><img src="images/17997227.jpg" alt="Garage"></a>
                     </div>
                     <div class="pic">
-                        <a href="#"><img src="/images/8217.jpg" alt="Cocina"></a>
+                        <a href="#"><img src="images/8217.jpg" alt="Cocina"></a>
                     </div>
                     <div class="pic">
-                        <a href="#"><img src="/images/sot.jpg" alt="Sotano"></a>
+                        <a href="#"><img src="images/sot.jpg" alt="Sotano"></a>
                     </div>
                     <div class="pic">
-                        <a href="#"><img src="/images/atic.jpg" alt="Estudio"></a>
+                        <a href="#"><img src="images/atic.jpg" alt="Estudio"></a>
                     </div>
                     <div class="pic">
-                        <a href="#"><img src="/images/jar.jpg" alt="Jardin"></a>
+                        <a href="#"><img src="images/jar.jpg" alt="Jardin"></a>
                     </div>
                     <div class="pic">
-                        <a href="#"><img src="/images/pasi.jpg" alt="Pasillo"></a>
+                        <a href="#"><img src="images/pasi.jpg" alt="Pasillo"></a>
                     </div>
                     <div class="pic">
-                        <a href="#"><img src="/images/ext.jpg" alt="Exterior"></a>
+                        <a href="#"><img src="images/ext.jpg" alt="Exterior"></a>
                     </div>
                 </div>
             </div>
