--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
     <!---------------------------------------------------------------------------------------->
     <div class="conteiner">
-        <h3 class="titulo">Muebles por habitación</h3>
+        <h3 class="titulo">Muebles por areas del hogar</h3>
         <div class="contenedor-principal">
             <button role="button" id="flecha-izquierda"  class="flecha-izquierda carousel-control-prev-icon" aria-hidden="true"><!--<span class="carousel-control-prev-icon" aria-hidden="true"></span>--></button>
             <div class="contenedor-carousel">
@@ -67,6 +67,9 @@
                     </div>
                     <div class="pic">
                         <a href="#"><img src="images/6537.jpg" alt="Balcón"></a>
+                    </div>
+                    <div class="pic">
+                        <a href="#"><img src="images/ext.jpg" alt="Exterior"></a>
                     </div>
                     <div class="pic">
                         <a href="#"><img src="images/3844.jpg" alt="Baño"></a>
@@ -94,9 +97,6 @@
                     </div>
                     <div class="pic">
                         <a href="#"><img src="images/pasi.jpg" alt="Pasillo"></a>
-                    </div>
-                    <div class="pic">
-                        <a href="#"><img src="images/ext.jpg" alt="Exterior"></a>
                     </div>
                 </div>
             </div>
@@ -167,7 +167,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-    <script src="js/script2.js"></script>
+    <script src="js/script1.js"></script>
     
 </body>
 </html>
