--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/hamburgers/1.1.3/hamburgers.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link rel="shortcut icon" href="favicon/man.ico">
+    <link rel="shortcut icon" href="favicon/font2.ico">
     <title>Roblec</title>
 </head>
 <body>
     <header>
         <section class="head-box">
-            <div><img class="logo" src="images/universidad.png" alt="UNAM"></div>
+            <div><img class="logo" src="images/font.png" alt="UNAM"></div>
             <div><input type="text" name="search" placeholder="Busqueda" id="#" class="src" autocomplete="off"></div>
             <div><img src="images\man.png" class="logo" alt="MR"></div>
         </section>
@@ -27,7 +27,7 @@
                 <li class="menu-item">
                     <a class="menu-link" href="#">Areas de interes</a>
                         <ul class="submenu">
-                            <li><a class="menu-link" href="#">Laboratorio</a></li>
+                            <   li><a class="menu-link" href="#">Laboratorio</a></li>
                             <li><a class="menu-link" href="#">Matematicas</a></li>
                             <li><a class="menu-link" href="#">Psicologia</a></li>
                             <li><a class="menu-link" href="#">Programación</a></li>
