--- a/index.html
+++ b/index.html
@@ -23,17 +23,17 @@
         <nav class="element">
             <ul class="menu .align-content-center">
                 <li><a class="menu-link" href="#">¿Quienes Somos?</a></li>
-                <li><a class="menu-link" href="#">Proyectos realizados</a></li>
+                <li><a class="menu-link" href="#">Ofertas de Octubre</a></li>
                 <li class="menu-item">
-                    <a class="menu-link" href="#">Areas de interes</a>
+                    <a class="menu-link" href="#">Servicio al cliente</a>
                         <ul class="submenu">
-                            <   li><a class="menu-link" href="#">Laboratorio</a></li>
+                            <li><a class="menu-link" href="#">Laboratorio</a></li>
                             <li><a class="menu-link" href="#">Matematicas</a></li>
                             <li><a class="menu-link" href="#">Psicologia</a></li>
                             <li><a class="menu-link" href="#">Programación</a></li>
                         </ul>
                     </li>
-                <li><a class="menu-link" href="#">Usuarios</a></li>
+                <li><a class="menu-link" href="#">Accesorios</a></li>
                 <li><a target="_blank" class="menu-link" href="https://api.whatsapp.com/send?phone=525540145714&text=Hola%20Manuel,%20me%20pareci%C3%B3%20asombrosa%20tu%20paguina">Contacto</a></li>
             </ul>
         </nav>
