--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <a href="HTML/CVManuelRuiz.pdf">Curriculum Vitae</a>
             <a href="HTML/proyectos.html">Proyectos concluidos</a>
             <a href="https://api.whatsapp.com/send?phone=525540145714&text=Hola%20Manuel,%20me%20pareci%C3%B3%20asombrosa%20tu%20paguina">Contacto</a>
-            <a href="http://multicommexicana.com/">Multicom</a>
+            <a href="#">Prueba</a>
             <a href="#">Agradecimientos</a>
         </nav>
     </aside>
@@ -115,10 +115,10 @@
         </div>
     </div>
     <div class="intel">
-        <div class="brother geo"><a href="HTML\geolocalizacion.html"><img src="https://image.flaticon.com/icons/svg/3159/3159280.svg" class="img-fluid" alt="Geolocalización"></a></div>
-        <div class="brother act"><a href="HTML/covid.html"><img src="https://image.flaticon.com/icons/svg/3063/3063198.svg" class="img-fluid" alt="Covid"></a></div>
-        <div class="brother know"><a href="HTML/index12.html"><img src="https://image.flaticon.com/icons/svg/3081/3081720.svg" class="img-fluid" alt="Conocimiento"></a></div>
-        <div class="brother ad"><a href="publicidad.html"><img src="https://image.flaticon.com/icons/svg/3065/3065012.svg" class="img-fluid" alt="Publicidad"></a></div>
+        <div class="brother geo"><a href="#"><img src="https://image.flaticon.com/icons/svg/3159/3159280.svg" class="img-fluid" alt="Geolocalización"></a></div>
+        <div class="brother act"><a href="#"><img src="https://image.flaticon.com/icons/svg/3063/3063198.svg" class="img-fluid" alt="Covid"></a></div>
+        <div class="brother know"><a href="#"><img src="https://image.flaticon.com/icons/svg/3081/3081720.svg" class="img-fluid" alt="Conocimiento"></a></div>
+        <div class="brother ad"><a href="#"><img src="https://image.flaticon.com/icons/svg/3065/3065012.svg" class="img-fluid" alt="Publicidad"></a></div>
     </div>
 
     <div class="contact">
