--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
                         <a href="#"><img src="images/OE7GDA0.jpg" alt="Dormitorio"></a>
                     </div>
                     <div class="pic">
-                        <a href="#"><img src="images/6537.jpg" alt="Balcón"></a>
+                        <a href="#"><img src="images/6537.png" alt="Balcón"></a>
+                    </div>
+                    <div class="pic">
+                        <a href="#"><img src="images/3844.png" alt="Baño"></a>
                     </div>
                     <div class="pic">
                         <a href="#"><img src="images/ext.jpg" alt="Exterior"></a>
-                    </div>
-                    <div class="pic">
-                        <a href="#"><img src="images/3844.jpg" alt="Baño"></a>
                     </div>
                     <div class="pic">
                         <a href="#"><img src="images/10412.jpg" alt="Comedor"></a>
