--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
 <!---------------------------------------------------------------------------------------->
     <div class="art">
         <div class= "text">
-            <article class="tex">Un matematico que no es en algún sentido un poeta nunca será un matematico completo.</article>
-            <cite class="tex-c">Karl Weierstrass</cite>
+            <article class="tex">Empresa 100% Méxicana fundada en 2020, nos especializamos en satisfacer las necesidades de muebleria en el hogar y la oficina.</article>
+            <cite class="tex-c">Muebles Roblec</cite>
         </div>
         <div class="video">
             <title>Multimedia</title>
